--- a/src/development/LocalTest/appsettings.json
+++ b/src/development/LocalTest/appsettings.json
@@ -38,8 +38,8 @@
     "LocalAppMode": "file",
     "LocalAppUrl": "http://localhost:5005",
     "LocalTestingStorageBasePath": "c:/AltinnPlatformLocal/",
-    "AppRepositoryBasePath": "<Path to your repos folder where you have cloned the Altinn Studio application repositories>",
-    "LocalTestingStaticTestDataPath": "<Path to altinn-studio repo>/src/development/TestData/"
+    "AppRepositoryBasePath": "C:/DATA/prosjekter/udir",
+    "LocalTestingStaticTestDataPath": "C:/DATA/prosjekter/udir/altinn-studio/src/development/TestData/"
   },
   "PlatformSettings": {
     "ApiAuthorizationEndpoint": "http://localhost:5101/authorization/api/v1/"
