--- a/src/development/docker-compose.yml
+++ b/src/development/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     networks:
       - altinntestlocal_network
     ports:
-      - "80:80"
+      - '80:80'
     environment:
       - NGINX_HOST=localhost
       - NGINX_PORT=80
@@ -20,13 +20,13 @@ services:
       - NGINX_ENVSUBST_OUTPUT_DIR=/etc/nginx
     build:
       context: ./loadbalancer
-  altinn_platform_pdf:
-    container_name: altinn-pdf
-    image: altinn-pdf:latest
-    restart: always
-    networks:
-      - altinntestlocal_network
-    ports:
-     - "5070:5070"
-    build:
-      context: ./../Altinn.Platform/Altinn.Platform.PDF/
+  # altinn_platform_pdf:
+  #   container_name: altinn-pdf
+  #   image: altinn-pdf:latest
+  #   restart: always
+  #   networks:
+  #     - altinntestlocal_network
+  #   ports:
+  #    - "5070:5070"
+  #   build:
+  #     context: ./../Altinn.Platform/Altinn.Platform.PDF/
